--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@
 </head>
 
 <body>
-    <p>Hellow Word</p>
+    <header class="header-bg">
+        <div class="header">
+            <a href="./">
+                <img src="./img/bikcraft 1.svg" alt="Bikcraft">
+            </a>
+
+            <nav aria-label="primaria">
+                <ul class="header-menu">
+                    <li><a href="">Bicicletas</a></li>
+                    <li><a href="">Seguros</a></li>
+                    <li><a href="">Contatos</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 
 </html>
