--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
 <body>
     <header class="header-bg">
-        <div class="header">
+        <div class=" header">
             <a href="./">
                 <img src="./img/bikcraft 1.svg" alt="Bicicleta eletrica preta">
             </a>
 
             <nav aria-label="primaria">
-                <ul class="header-menu">
+                <ul class="header-menu font-1-m cor-01">
                     <li><a href="">Bicicletas</a></li>
                     <li><a href="">Seguros</a></li>
                     <li><a href="">Contatos</a></li>
@@ -33,16 +33,19 @@
     <main class="introducao-bg">
         <div class="introducao">
             <div class="introducao-conteudo">
-                <h1>Bicicletas feitas
-                    sob medida<span>.</span></h1>
-                <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-                <a href="#">Escolha a sua</a>
+                <h1 class="font-1-xxl cor-01">Bicicletas feitas
+                    sob medida<span class="cor-p1">.</span></h1>
+                <p class="font-2-l cor-05">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+                <a class="button" href="#">Escolha a sua </a>
             </div>
             <div>
                 <img src="./img/fotos/introducao.jpg" alt="introducao">
             </div>
         </div>
     </main>
+    <section>
+        <h1 class="font-1-xxl cor-12">escolha a sua<span class="cor-p1">.</span></h1>
+    </section>
 </body>
 
 </html>
