--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header class="header-bg">
-        <div class=" header">
+        <div class="header container">
             <a href="./">
                 <img src="./img/bikcraft 1.svg" alt="Bicicleta eletrica preta">
             </a>
@@ -31,7 +31,7 @@
         </div>
     </header>
     <main class="introducao-bg">
-        <div class="introducao">
+        <div class="introducao container">
             <div class="introducao-conteudo">
                 <h1 class="font-1-xxl cor-01">Bicicletas feitas
                     sob medida<span class="cor-p1">.</span></h1>
@@ -43,9 +43,36 @@
             </div>
         </div>
     </main>
-    <section>
-        <h1 class="font-1-xxl cor-12">escolha a sua<span class="cor-p1">.</span></h1>
-    </section>
+
+    <article class="bicicletas">
+        <div class="container">
+            <h2 class="font-1-xxl cor-12">escolha a sua<span class="cor-p1">.</span></h2>
+        </div>
+        <ul class="bicicletas-lista">
+            <li>
+                <a href="#">
+                    <img src="./img/bicicletas/MagicMight-home.jpg" alt="" srcset="">
+                    <h3 class="font-1-xl cor-11">Magic Might</h3>
+                    <span class="font-2-m cor-08">R$ 2499</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="./img/bicicletas/NimbusStark-home.jpg" alt="" srcset="">
+                    <h3 class="font-1-xl cor-11">Nimbus Starkt</h3>
+                    <span class="font-2-m cor-08">R$ 4999</span>
+                </a>
+            </li>
+            <li>
+                <a href=#">
+                    <img src="./img/bicicletas/NebulaCosmic-home.jpg" alt="" srcset="">
+                    <h3 class="font-1-xl cor-11">Nebula Cosmic</h3>
+                    <span class="font-2-m cor-08">R$ 3999</span>
+                </a>
+            </li>
+
+        </ul>
+    </article>
 </body>
 
 </html>
