--- a/index.html
+++ b/index.html
@@ -70,8 +70,34 @@
                     <span class="font-2-m cor-08">R$ 3999</span>
                 </a>
             </li>
-
         </ul>
+    </article>
+    <article class="tecnologia-bg">
+        <div class="tecnologia-container container">
+            <div class="tecnologia-conteudo">
+                <span class="font-2-l-b cor-05">Tecnologia Avançada</span>
+                <h2 class="font-1-xxl cor-01">voce escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
+                <p class="font-2-l cor-05">Cada Bikcraft é única e possui a sua identidade.
+                    As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
+                <a class="link" href="#">Escolha Um modelo</a>
+                <div class="vantagens">
+                    <div>
+                        <img src="./img/icones/eletrica.svg" alt="" srcset="">
+                        <h3 class="font-1-l cor-01">Motor Elétrico</h3>
+                        <p class="font-2-s cor-05">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
+                    </div>
+                    <div>
+                        <img src="./img/icones/rastreador.svg" alt="" srcset="">
+                        <h3 class="font-1-l cor-01">Rastreador</h3>
+                        <p class="font-2-s cor-05">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="tecnologia-img">
+                <img src="./img/fotos/tecnologia.jpg" alt="" srcset="">
+            </div>
+        </div>
+
     </article>
 </body>
 
