--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -97,8 +97,35 @@
                 <img src="./img/fotos/tecnologia.jpg" alt="" srcset="">
             </div>
         </div>
-
     </article>
+    <section class="parceiros" aria-label="nossos parceiros">
+
+        <h2 class="container font-1-xxl cor-12">nossos parceiros<span class="cor-p1">.</span></h2>
+
+        <ul class="parceiros-lista">
+            <li><img src="./img/parceiros/caravan.svg" alt="caravan"></li>
+            <li><img src="./img/parceiros/ranek.svg" alt="ranek"></li>
+            <li><img src="./img/parceiros/handel.svg" alt="handel.svg"></li>
+            <li><img src="./img/parceiros/dogs.svg" alt="dogs.svg"></li>
+            <li><img src="./img/parceiros/lescone.svg" alt="lescone.svg"></li>
+            <li><img src="./img/parceiros/wildbeast.svg" alt="wildbeast.svg"></li>
+            <li><img src="./img/parceiros/flexblog.svg" alt="flexblog.svg"></li>
+            <li><img src="./img/parceiros/surfbot.svg" alt="surfbot.svg"></li>
+        </ul>
+
+        </div>
+    </section>
+    <section class="depoimento">
+        <div>
+            <img src="./img/fotos/depoimento.jpg" alt="depoimento">
+        </div>
+        <div class="depoimento-conteudo">
+            <blockquote class="font-1-xl cor-p5">
+                <p>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo. </p>
+            </blockquote>
+            <span class="font-1-m-b cor-p4">Ana Julia</span>
+        </div>
+    </section>
 </body>
 
 </html>
