--- a/index.html
+++ b/index.html
@@ -126,6 +126,36 @@
             <span class="font-1-m-b cor-p4">Ana Julia</span>
         </div>
     </section>
+    <article class="seguros-bg">
+        <div class="seguros container">
+            <h2 class="font-1-xxl cor-01">seguros<span class="cor-p1">.</span></h2>
+            <div class="seguros-item">
+                <h3 class="font-1-xl cor-08">PRATA</h3>
+                <span class="font-1-xl cor-01">R$ 199 <span class="mensal"> mensal</span></span>
+                <ul class="font-2-m cor-01">
+                    <li> Duas trocas por ano</li>
+                    <li> Assistência técnica </li>
+                    <li> Suporte 08h as 18h </li>
+                    <li> Cobertura estadual</li>
+                </ul>
+                <a class="button secundario" href="">Inscreva-se</a>
+            </div>
+            <div class="seguros-item">
+                <h3 class="font-1-xl cor-p1">OURO</h3>
+                <span class="font-1-xl cor-01">R$ 499 <span class="mensal"> mensal</span></span>
+                <ul class="font-2-m cor-01">
+                    <li>Cinco trocas por ano</li>
+                    <li> Assistência especial </li>
+                    <li> Suporte 24h </li>
+                    <li> Cobertura nacional</li>
+                    <li> Desconto em parceiros</li>
+                    <li> Acesso ao Clube Bikcraft</li>
+                </ul>
+                <a class="button" href="">Inscreva-se</a>
+            </div>
+
+        </div>
+    </article>
 </body>
 
 </html>
