--- a/index.html
+++ b/index.html
@@ -153,9 +153,48 @@
                 </ul>
                 <a class="button" href="">Inscreva-se</a>
             </div>
-
         </div>
     </article>
+    <footer class="footer-bg">
+        <div class="footer container">
+            <div class="img">
+                <img src="./img/bikcraft 1.svg" alt="">
+            </div>
+            <div class="footer-contato">
+                <h3 class="font-2-l-b cor-01">Contato</h3>
+                <ul class="contato font-1-m cor-05">
+                    <li><a href=" tel:+55229999999">+55 22 22 99999999</a></li>
+                    <li><a href="tomail:contato@bikecraft.com">contato@bikecraft.com</a></li>
+                    <li>Rua ali perto, 45, Botafogo</li>
+                    <li>Rio de Janeiro - RJ</li>
+                </ul>
+                <ul class="sociais">
+                    <a href="">
+                        <img src="./img/social-media/instagram.svg" alt="Instagram" srcset="">
+                    </a>
+                    <a href="">
+                        <img src="./img/social-media/facebook.svg" alt="Facebook" srcset="">
+                    </a>
+                    <a href="">
+                        <img src="./img/social-media/youtube.svg" alt="Youtube" srcset="">
+                    </a>
+                </ul>
+            </div>
+            <div class="footer-nav">
+                <h3 class="font-2-l-b cor-01">Informações</h3>
+                <nav>
+                    <ul class="font-1-m cor-05">
+                        <li><a href="">Bicicletas</a></li>
+                        <li><a href="">Seguros</a></li>
+                        <li><a href="">Contatos</a></li>
+                        <li><a href="">Termos e Condições</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+            <p class="copy font-2-m cor-09">BIkcraft © alguns direitos reservados.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
