--- a/termos.html
+++ b/termos.html
@@ -30,6 +30,40 @@
             </nav>
         </div>
     </header>
+
+    <main>
+        <div class="titulo-bg">
+            <div class="titulo container">
+                <p class="font-2-l-b cor-05">Termos de Uso</p>
+                <h1 class="font-1-xxl cor-01">termos e condições
+                    <span class="cor-p1">.</span>
+                </h1>
+            </div>
+        </div>
+        <div class="termos font-2-s cor-11 container">
+            <h2 class="font-1-l cor-11">1. Política de Estorno</h2>
+            <p>1.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.
+            </p>
+            <p>1.2 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.
+            </p>
+            <p>1.3 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.
+            </p>
+            <h2 class="font-1-l cor-11">2. Conta do Usuário</h2>
+            <p>2.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.
+            </p>
+            <p>2.2 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.
+            </p>
+            <p>2.3 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.
+            </p>
+            <h2 class="font-1-l cor-11">3. Seguro Bikcraft</h2>
+            <p>3.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.
+            </p>
+            <p>3.2 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.
+            </p>
+            <p>3.3 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos á vista aceitamos PIX e Boleto atrasvés do PagSeguro.
+            </p>
+        </div>
+    </main>
     <footer class="footer-bg">
         <div class="footer container">
             <div class="img">
