--- a/bicicletas.html
+++ b/bicicletas.html
@@ -35,8 +35,7 @@
 		<div class="titulo-bg">
 			<div class="titulo container">
 				<p class="font-2-l-b cor-05">escolha a melhor para você</p>
-				<h1 class="font-1-xxl cor-01">nossas bicicletas
-					<span class="cor-p1">.</span>
+				<h1 class="font-1-xxl cor-01">nossas bicicletas<span class="cor-p1">.</span>
 				</h1>
 			</div>
 		</div>
