--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </main>
 
-    <article class="bicicletas">
+    <article class="bikes">
         <div class="container">
             <h2 class="font-1-xxl cor-12">escolha a sua<span class="cor-p1">.</span></h2>
         </div>
