--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <h2 class="font-1-xxl cor-01">voce escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
                 <p class="font-2-l cor-05">Cada Bikcraft é única e possui a sua identidade.
                     As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
-                <a class="link" href="#">Escolha Um modelo</a>
+                <a class="link" href="./bicicletas.html">Escolha Um modelo</a>
                 <div class="vantagens">
                     <div>
                         <img src="./img/icones/eletrica.svg" alt="" srcset="">
