--- a/bicicletas.html
+++ b/bicicletas.html
@@ -23,8 +23,8 @@
 
 			<nav aria-label="primaria">
 				<ul class="header-menu font-1-m cor-01">
-					<li><a id="bicicletas" href="./bicicletas.html">Bicicletas</a></li>
-					<li><a href="">Seguros</a></li>
+					<li><a id="bicicletas-link" href="./bicicletas.html">Bicicletas</a></li>
+					<li><a id="seguros" href="./seguros.html">Seguros</a></li>
 					<li><a href="">Contatos</a></li>
 				</ul>
 			</nav>
@@ -163,8 +163,8 @@
 				<h3 class="font-2-l-b cor-01">Informações</h3>
 				<nav>
 					<ul class="font-1-m cor-05">
-						<li><a href="">Bicicletas</a></li>
-						<li><a href="">Seguros</a></li>
+						<li><a href="./bicicletas.html">Bicicletas</a></li>
+						<li><a href="./seguros.html">Seguros</a></li>
 						<li><a href="">Contatos</a></li>
 						<li><a href="">Termos e Condições</a></li>
 					</ul>
