--- a/index.html
+++ b/index.html
@@ -2,199 +2,199 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. 
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. 
    Explore o mundo na sua velocidade com a Bikcraft.">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-    <title>Document</title>
+	<link rel="stylesheet" href="./css/style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+	<title>Document</title>
 </head>
 
 <body>
-    <header class="header-bg">
-        <div class="header container">
-            <a href="./">
-                <img src="./img/bikcraft 1.svg" alt="Bicicleta eletrica preta">
-            </a>
+	<header class="header-bg">
+		<div class="header container">
+			<a href="./">
+				<img src="./img/bikcraft 1.svg" alt="Bicicleta eletrica preta">
+			</a>
 
-            <nav aria-label="primaria">
-                <ul class="header-menu font-1-m cor-01">
-                    <li><a href="./bicicletas.html">Bicicletas</a></li>
-                    <li><a href="">Seguros</a></li>
-                    <li><a href="">Contatos</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <main class="introducao-bg">
-        <div class="introducao container">
-            <div class="introducao-conteudo">
-                <h1 class="font-1-xxl cor-01">Bicicletas feitas
-                    sob medida<span class="cor-p1">.</span></h1>
-                <p class="font-2-l cor-05">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-                <a class="button" href="#">Escolha a sua </a>
-            </div>
-            <div>
-                <img src="./img/fotos/introducao.jpg" alt="introducao">
-            </div>
-        </div>
-    </main>
+			<nav aria-label="primaria">
+				<ul class="header-menu font-1-m cor-01">
+					<li><a href="./bicicletas.html">Bicicletas</a></li>
+					<li><a href="">Seguros</a></li>
+					<li><a href="">Contatos</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+	<main class="introducao-bg">
+		<div class="introducao container">
+			<div class="introducao-conteudo">
+				<h1 class="font-1-xxl cor-01">Bicicletas feitas
+					sob medida<span class="cor-p1">.</span></h1>
+				<p class="font-2-l cor-05">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+				<a class="button" href="#">Escolha a sua </a>
+			</div>
+			<div>
+				<img src="./img/fotos/introducao.jpg" alt="introducao">
+			</div>
+		</div>
+	</main>
 
-    <article class="bikes">
-        <div class="container">
-            <h2 class="font-1-xxl cor-12">escolha a sua<span class="cor-p1">.</span></h2>
-        </div>
-        <ul class="bicicletas-lista">
-            <li>
-                <a href="#">
-                    <img src="./img/bicicletas/MagicMight-home.jpg" alt="" srcset="">
-                    <h3 class="font-1-xl cor-11">Magic Might</h3>
-                    <span class="font-2-m cor-08">R$ 2499</span>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="./img/bicicletas/NimbusStark-home.jpg" alt="" srcset="">
-                    <h3 class="font-1-xl cor-11">Nimbus Starkt</h3>
-                    <span class="font-2-m cor-08">R$ 4999</span>
-                </a>
-            </li>
-            <li>
-                <a href=#">
-                    <img src="./img/bicicletas/NebulaCosmic-home.jpg" alt="" srcset="">
-                    <h3 class="font-1-xl cor-11">Nebula Cosmic</h3>
-                    <span class="font-2-m cor-08">R$ 3999</span>
-                </a>
-            </li>
-        </ul>
-    </article>
-    <article class="tecnologia-bg">
-        <div class="tecnologia-container container">
-            <div class="tecnologia-conteudo">
-                <span class="font-2-l-b cor-05">Tecnologia Avançada</span>
-                <h2 class="font-1-xxl cor-01">voce escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
-                <p class="font-2-l cor-05">Cada Bikcraft é única e possui a sua identidade.
-                    As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
-                <a class="link" href="./bicicletas.html">Escolha Um modelo</a>
-                <div class="vantagens">
-                    <div>
-                        <img src="./img/icones/eletrica.svg" alt="" srcset="">
-                        <h3 class="font-1-l cor-01">Motor Elétrico</h3>
-                        <p class="font-2-s cor-05">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
-                    </div>
-                    <div>
-                        <img src="./img/icones/rastreador.svg" alt="" srcset="">
-                        <h3 class="font-1-l cor-01">Rastreador</h3>
-                        <p class="font-2-s cor-05">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="tecnologia-img">
-                <img src="./img/fotos/tecnologia.jpg" alt="" srcset="">
-            </div>
-        </div>
-    </article>
-    <section class="parceiros" aria-label="nossos parceiros">
+	<article class="bikes">
+		<div class="container">
+			<h2 class="font-1-xxl cor-12">escolha a sua<span class="cor-p1">.</span></h2>
+		</div>
+		<ul class="bicicletas-lista">
+			<li>
+				<a href="#">
+					<img src="./img/bicicletas/MagicMight-home.jpg" alt="" srcset="">
+					<h3 class="font-1-xl cor-11">Magic Might</h3>
+					<span class="font-2-m cor-08">R$ 2499</span>
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<img src="./img/bicicletas/NimbusStark-home.jpg" alt="" srcset="">
+					<h3 class="font-1-xl cor-11">Nimbus Starkt</h3>
+					<span class="font-2-m cor-08">R$ 4999</span>
+				</a>
+			</li>
+			<li>
+				<a href=#">
+					<img src="./img/bicicletas/NebulaCosmic-home.jpg" alt="" srcset="">
+					<h3 class="font-1-xl cor-11">Nebula Cosmic</h3>
+					<span class="font-2-m cor-08">R$ 3999</span>
+				</a>
+			</li>
+		</ul>
+	</article>
+	<article class="tecnologia-bg">
+		<div class="tecnologia-container container">
+			<div class="tecnologia-conteudo">
+				<span class="font-2-l-b cor-05">Tecnologia Avançada</span>
+				<h2 class="font-1-xxl cor-01">voce escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
+				<p class="font-2-l cor-05">Cada Bikcraft é única e possui a sua identidade.
+					As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
+				<a class="link" href="./bicicletas.html">Escolha Um modelo</a>
+				<div class="vantagens-home">
+					<div>
+						<img src="./img/icones/eletrica.svg" alt="" srcset="">
+						<h3 class="font-1-l cor-01">Motor Elétrico</h3>
+						<p class="font-2-s cor-05">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
+					</div>
+					<div>
+						<img src="./img/icones/rastreador.svg" alt="" srcset="">
+						<h3 class="font-1-l cor-01">Rastreador</h3>
+						<p class="font-2-s cor-05">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+					</div>
+				</div>
+			</div>
+			<div class="tecnologia-img">
+				<img src="./img/fotos/tecnologia.jpg" alt="" srcset="">
+			</div>
+		</div>
+	</article>
+	<section class="parceiros" aria-label="nossos parceiros">
 
-        <h2 class="container font-1-xxl cor-12">nossos parceiros<span class="cor-p1">.</span></h2>
+		<h2 class="container font-1-xxl cor-12">nossos parceiros<span class="cor-p1">.</span></h2>
 
-        <ul class="parceiros-lista">
-            <li><img src="./img/parceiros/caravan.svg" alt="caravan"></li>
-            <li><img src="./img/parceiros/ranek.svg" alt="ranek"></li>
-            <li><img src="./img/parceiros/handel.svg" alt="handel.svg"></li>
-            <li><img src="./img/parceiros/dogs.svg" alt="dogs.svg"></li>
-            <li><img src="./img/parceiros/lescone.svg" alt="lescone.svg"></li>
-            <li><img src="./img/parceiros/wildbeast.svg" alt="wildbeast.svg"></li>
-            <li><img src="./img/parceiros/flexblog.svg" alt="flexblog.svg"></li>
-            <li><img src="./img/parceiros/surfbot.svg" alt="surfbot.svg"></li>
-        </ul>
+		<ul class="parceiros-lista">
+			<li><img src="./img/parceiros/caravan.svg" alt="caravan"></li>
+			<li><img src="./img/parceiros/ranek.svg" alt="ranek"></li>
+			<li><img src="./img/parceiros/handel.svg" alt="handel.svg"></li>
+			<li><img src="./img/parceiros/dogs.svg" alt="dogs.svg"></li>
+			<li><img src="./img/parceiros/lescone.svg" alt="lescone.svg"></li>
+			<li><img src="./img/parceiros/wildbeast.svg" alt="wildbeast.svg"></li>
+			<li><img src="./img/parceiros/flexblog.svg" alt="flexblog.svg"></li>
+			<li><img src="./img/parceiros/surfbot.svg" alt="surfbot.svg"></li>
+		</ul>
 
-        </div>
-    </section>
-    <section class="depoimento">
-        <div>
-            <img src="./img/fotos/depoimento.jpg" alt="depoimento">
-        </div>
-        <div class="depoimento-conteudo">
-            <blockquote class="font-1-xl cor-p5">
-                <p>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo. </p>
-            </blockquote>
-            <span class="font-1-m-b cor-p4">Ana Julia</span>
-        </div>
-    </section>
-    <article class="seguros-bg">
-        <div class="seguros container">
-            <h2 class="font-1-xxl cor-01">seguros<span class="cor-p1">.</span></h2>
-            <div class="seguros-item">
-                <h3 class="font-1-xl cor-08">PRATA</h3>
-                <span class="font-1-xl cor-01">R$ 199 <span class="mensal"> mensal</span></span>
-                <ul class="font-2-m cor-01">
-                    <li> Duas trocas por ano</li>
-                    <li> Assistência técnica </li>
-                    <li> Suporte 08h as 18h </li>
-                    <li> Cobertura estadual</li>
-                </ul>
-                <a class="button secundario" href="">Inscreva-se</a>
-            </div>
-            <div class="seguros-item">
-                <h3 class="font-1-xl cor-p1">OURO</h3>
-                <span class="font-1-xl cor-01">R$ 499 <span class="mensal"> mensal</span></span>
-                <ul class="font-2-m cor-01">
-                    <li>Cinco trocas por ano</li>
-                    <li> Assistência especial </li>
-                    <li> Suporte 24h </li>
-                    <li> Cobertura nacional</li>
-                    <li> Desconto em parceiros</li>
-                    <li> Acesso ao Clube Bikcraft</li>
-                </ul>
-                <a class="button" href="">Inscreva-se</a>
-            </div>
-        </div>
-    </article>
-    <footer class="footer-bg">
-        <div class="footer container">
-            <div class="img">
-                <img src="./img/bikcraft 1.svg" alt="">
-            </div>
-            <div class="footer-contato">
-                <h3 class="font-2-l-b cor-01">Contato</h3>
-                <ul class="contato font-1-m cor-05">
-                    <li><a href=" tel:+55229999999">+55 22 22 99999999</a></li>
-                    <li><a href="tomail:contato@bikecraft.com">contato@bikecraft.com</a></li>
-                    <li>Rua ali perto, 45, Botafogo</li>
-                    <li>Rio de Janeiro - RJ</li>
-                </ul>
-                <ul class="sociais">
-                    <a href="">
-                        <img src="./img/social-media/instagram.svg" alt="Instagram" srcset="">
-                    </a>
-                    <a href="">
-                        <img src="./img/social-media/facebook.svg" alt="Facebook" srcset="">
-                    </a>
-                    <a href="">
-                        <img src="./img/social-media/youtube.svg" alt="Youtube" srcset="">
-                    </a>
-                </ul>
-            </div>
-            <div class="footer-nav">
-                <h3 class="font-2-l-b cor-01">Informações</h3>
-                <nav>
-                    <ul class="font-1-m cor-05">
-                        <li><a href="">Bicicletas</a></li>
-                        <li><a href="">Seguros</a></li>
-                        <li><a href="">Contatos</a></li>
-                        <li><a href="./termos.html">Termos e Condições</a></li>
-                    </ul>
-                </nav>
-            </div>
+		</div>
+	</section>
+	<section class="depoimento">
+		<div>
+			<img src="./img/fotos/depoimento.jpg" alt="depoimento">
+		</div>
+		<div class="depoimento-conteudo">
+			<blockquote class="font-1-xl cor-p5">
+				<p>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo. </p>
+			</blockquote>
+			<span class="font-1-m-b cor-p4">Ana Julia</span>
+		</div>
+	</section>
+	<article class="seguros-bg">
+		<div class="seguros container">
+			<h2 class="font-1-xxl cor-01">seguros<span class="cor-p1">.</span></h2>
+			<div class="seguros-item">
+				<h3 class="font-1-xl cor-08">PRATA</h3>
+				<span class="font-1-xl cor-01">R$ 199 <span class="mensal"> mensal</span></span>
+				<ul class="font-2-m cor-01">
+					<li> Duas trocas por ano</li>
+					<li> Assistência técnica </li>
+					<li> Suporte 08h as 18h </li>
+					<li> Cobertura estadual</li>
+				</ul>
+				<a class="button secundario" href="">Inscreva-se</a>
+			</div>
+			<div class="seguros-item">
+				<h3 class="font-1-xl cor-p1">OURO</h3>
+				<span class="font-1-xl cor-01">R$ 499 <span class="mensal"> mensal</span></span>
+				<ul class="font-2-m cor-01">
+					<li>Cinco trocas por ano</li>
+					<li> Assistência especial </li>
+					<li> Suporte 24h </li>
+					<li> Cobertura nacional</li>
+					<li> Desconto em parceiros</li>
+					<li> Acesso ao Clube Bikcraft</li>
+				</ul>
+				<a class="button" href="">Inscreva-se</a>
+			</div>
+		</div>
+	</article>
+	<footer class="footer-bg">
+		<div class="footer container">
+			<div class="img">
+				<img src="./img/bikcraft 1.svg" alt="">
+			</div>
+			<div class="footer-contato">
+				<h3 class="font-2-l-b cor-01">Contato</h3>
+				<ul class="contato font-1-m cor-05">
+					<li><a href=" tel:+55229999999">+55 22 22 99999999</a></li>
+					<li><a href="tomail:contato@bikecraft.com">contato@bikecraft.com</a></li>
+					<li>Rua ali perto, 45, Botafogo</li>
+					<li>Rio de Janeiro - RJ</li>
+				</ul>
+				<ul class="sociais">
+					<a href="">
+						<img src="./img/social-media/instagram.svg" alt="Instagram" srcset="">
+					</a>
+					<a href="">
+						<img src="./img/social-media/facebook.svg" alt="Facebook" srcset="">
+					</a>
+					<a href="">
+						<img src="./img/social-media/youtube.svg" alt="Youtube" srcset="">
+					</a>
+				</ul>
+			</div>
+			<div class="footer-nav">
+				<h3 class="font-2-l-b cor-01">Informações</h3>
+				<nav>
+					<ul class="font-1-m cor-05">
+						<li><a href="">Bicicletas</a></li>
+						<li><a href="">Seguros</a></li>
+						<li><a href="">Contatos</a></li>
+						<li><a href="./termos.html">Termos e Condições</a></li>
+					</ul>
+				</nav>
+			</div>
 
-            <p class="copy font-2-m cor-09">BIkcraft © alguns direitos reservados.</p>
-        </div>
-    </footer>
+			<p class="copy font-2-m cor-09">BIkcraft © alguns direitos reservados.</p>
+		</div>
+	</footer>
 </body>
 
 </html>
