--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
 		</div>
 		<ul class="bicicletas-lista">
 			<li>
-				<a href="#">
+				<a href="../bicicleta/nimbus.html">
 					<img src="./img/bicicletas/MagicMight-home.jpg" alt="" srcset="">
 					<h3 class="font-1-xl cor-11">Magic Might</h3>
 					<span class="font-2-m cor-08">R$ 2499</span>
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="../bicicleta/nimbus.html">
 					<img src="./img/bicicletas/NimbusStark-home.jpg" alt="" srcset="">
 					<h3 class="font-1-xl cor-11">Nimbus Starkt</h3>
 					<span class="font-2-m cor-08">R$ 4999</span>
 				</a>
 			</li>
 			<li>
-				<a href=#">
+				<a href="../bicicleta/nimbus.html">
 					<img src="./img/bicicletas/NebulaCosmic-home.jpg" alt="" srcset="">
 					<h3 class="font-1-xl cor-11">Nebula Cosmic</h3>
 					<span class="font-2-m cor-08">R$ 3999</span>
