--- a/bicicletas.html
+++ b/bicicletas.html
@@ -109,7 +109,7 @@
 				<span class="font-2-m cor-01">R$ 2499</span>
 			</div>
 			<div class="bicicletas-conteudo">
-				<h2 class="font-1-xl ">Magic Might</h2>
+				<h2 class="font-1-xs ">Magic Might</h2>
 				<p class="font-2-s cor-08">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
 				<ul class="font-1-m cor-08">
 					<li>
