--- a/bicicleta/nimbus.html
+++ b/bicicleta/nimbus.html
@@ -87,27 +87,26 @@
       </div>
     </div>
   </main>
-  <article id="bicicleta" class="bikes">
-    <div class="container">
-      <h2 class="font-1-xxl cor-12">escolha a sua<span class="cor-p1">.</span></h2>
+  <article id="bicicleta" class="bikes container">
+    <h2 class="font-1-xxl cor-12">escolha a sua<span class="cor-p1">.</span></h2>
 
-      <ul class="bicicletas-lista">
-        <li>
-          <a href="../bicicleta/nimbus.html">
-            <img src="../img/bicicletas/magic.jpg" alt="" srcset="">
-            <h3 class="font-1-xl cor-11">Magic Might</h3>
-            <span class="font-2-m cor-08">R$ 2499</span>
-          </a>
-        </li>
-        <li>
-          <a href="../bicicleta/nimbus.html">
-            <img src="../img/bicicletas/nebula.jpg" alt="" srcset="">
-            <h3 class="font-1-xl cor-11">Nimbus Starkt</h3>
-            <span class="font-2-m cor-08">R$ 4999</span>
-          </a>
-        </li>
+    <ul class="bicicletas-lista">
+      <li>
+        <a href="./magic.html">
+          <img src="../img/bicicletas/magic.jpg" alt="" srcset="">
+          <h3 class="font-1-xl cor-11">Magic Might</h3>
+          <span class="font-2-m cor-08">R$ 2499</span>
+        </a>
+      </li>
+      <li>
+        <a href="./nebula.html">
+          <img src="../img/bicicletas/nebula.jpg" alt="" srcset="">
+          <h3 class="font-1-xl cor-11">Nimbus Starkt</h3>
+          <span class="font-2-m cor-08">R$ 4999</span>
+        </a>
+      </li>
 
-      </ul>
+    </ul>
     </div>
   </article>
 
