--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<nav aria-label="primaria">
 				<ul class="header-menu font-1-m cor-01">
 					<li><a href="./bicicletas.html">Bicicletas</a></li>
-					<li><a href="">Seguros</a></li>
+					<li><a href="./seguros.html">Seguros</a></li>
 					<li><a href="">Contatos</a></li>
 				</ul>
 			</nav>
@@ -36,7 +36,7 @@
 				<h1 class="font-1-xxl cor-01">Bicicletas feitas
 					sob medida<span class="cor-p1">.</span></h1>
 				<p class="font-2-l cor-05">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-				<a class="button" href="#">Escolha a sua </a>
+				<a class="button" href="./bicicletas.html">Escolha a sua </a>
 			</div>
 			<div>
 				<img src="./img/fotos/introducao.jpg" alt="introducao">
@@ -57,14 +57,14 @@
 				</a>
 			</li>
 			<li>
-				<a href="../bicicleta/nimbus.html">
+				<a href="./bicicleta/nimbus.html">
 					<img src="./img/bicicletas/NimbusStark-home.jpg" alt="" srcset="">
 					<h3 class="font-1-xl cor-11">Nimbus Starkt</h3>
 					<span class="font-2-m cor-08">R$ 4999</span>
 				</a>
 			</li>
 			<li>
-				<a href="../bicicleta/nimbus.html">
+				<a href="./bicicleta/nimbus.html">
 					<img src="./img/bicicletas/NebulaCosmic-home.jpg" alt="" srcset="">
 					<h3 class="font-1-xl cor-11">Nebula Cosmic</h3>
 					<span class="font-2-m cor-08">R$ 3999</span>
