--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		</div>
 		<ul class="bicicletas-lista">
 			<li>
-				<a href="../bicicleta/nimbus.html">
+				<a href="./bicicleta/nimbus.html">
 					<img src="./img/bicicletas/MagicMight-home.jpg" alt="" srcset="">
 					<h3 class="font-1-xl cor-11">Magic Might</h3>
 					<span class="font-2-m cor-08">R$ 2499</span>
