--- a/bicicletas.html
+++ b/bicicletas.html
@@ -26,7 +26,7 @@
 				<ul class="header-menu font-1-m cor-01">
 					<li><a id="bicicletas-link" href="./bicicletas.html">Bicicletas</a></li>
 					<li><a id="seguros" href="./seguros.html">Seguros</a></li>
-					<li><a href="">Contatos</a></li>
+					<li><a href="./contato.html">Contatos</a></li>
 				</ul>
 			</nav>
 		</div>
