--- a/bicicleta/magic.html
+++ b/bicicleta/magic.html
@@ -41,9 +41,9 @@
     </div>
     <div class="bicicleta container">
       <div class="bicicleta-imagem">
-        <img src="../img/bicicleta/magic.jpg" alt="" srcset="">
-        <img src="../img/bicicleta/nebula.jpg" alt="" srcset="">
-        <img src="../img/bicicleta/nimbus-1.jpg" alt="" srcset="">
+        <img src="../img/bicicleta/magic.jpg" alt="Bicicleta1" srcset="">
+        <img src="../img/bicicleta/nebula.jpg" alt="Bicicleta2" srcset="">
+        <img src="../img/bicicleta/nimbus-1.jpg" alt="Bicicleta3" srcset="">
       </div>
       <div class="bicicleta-conteudo">
         <p class="font-2-l cor-01">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
